Details: Using Ubuntu 11.04 64bit Removed the Ubuntu version of LibreOffice and installed the one from Thedocumentfoundation.org (3.4) Under Writer, do the following: 1- Press F11 to open the Style and Formatting window 2- Select any of the styles tab (paragraph, character, etc.) 3- Select one of the styles and choose to modify it 4- Go to any of the tab in the modification window and click Apply (you don't have to modify anything). What happens: Wherever you are, when clicking on Apply, it will always reset to the first tab (the default one when the modification window opened). What it should do: You should stay in the current tab. Note: I tried to reproduce the same thing under Calc, Impress and the others, but I couldn't find an Apply button anywhere.
[LibO 3.4.1 RC2 – LibreOffice 3.4.1 OOO340m1 (Build:102) / on WinXP 32b] Yes, I can confirm this annoying behaviour. This bug has also been reported in 'Bug 37447 - Apply button function unintuitive, unpredictable'. Furthermore there are--at least--two requests for enhancement regarding this topic 'Apply button': Bug 36112 - Combine Apply and Reset Buttons in Dialogues Bug 37336 - Feature request: Apply buttons See also: Design/Whiteboards/PropertiesButtonLayout http://wiki.documentfoundation.org/Design/Whiteboards/PropertiesButtonLayout So (for me), the future of the 'Apply button' is in the air...
[This is an automated message.] This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it started right out as NEW without ever being explicitly confirmed. The bug is changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases. Details on how to test the 3.5.0 beta1 can be found at: http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1 more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
This bug is still there in latest version and can be reproduced.
I have added this bug to list of most annoying bugs in 3.5 (#37361). Please see comment number 362 there for rationale. Also, if you close dialog through OK or Cancel button or just close it through window manager, LO will save last opened tab and restore it next time it creates this window. As far as I understand window management, this means that there is already code to save visible tab and restore it. If I am right, then fixing this is only matter of attaching this code to "press »Apply« button" event. This may qualify this bug as easyhack. I have also changed title of bug to something I believe is more understandable outside of first message context. Best regards Mirosław Zalewski
*** Bug 55862 has been marked as a duplicate of this bug. ***
*** Bug 37447 has been marked as a duplicate of this bug. ***
Position of the window is also reset to its initial position. This is very annoying. imagine the window opens where you want see your modifications. the you move the when where it doesn't care but each time you click 'apply', you have to move away the window
I believe this is a partial duplicate of bug 38828 which is fixed in master (for 3-7) by http://cgit.freedesktop.org/libreoffice/core/commit/?id=d800847be075dc7420e2655ba8167cc4f9436dc9 and http://cgit.freedesktop.org/libreoffice/core/commit/?id=d800847be075dc7420e2655ba8167cc4f9436dc9 They make the apply button remember the current tab. What remains is the dialog disappearing and reappearing, which is still annoying.
Travis Carter committed a patch related to this issue. It has been pushed to "libreoffice-3-6": http://cgit.freedesktop.org/libreoffice/core/commit/?id=6a2c81b9a5cfa80bbc05c7d2fdd7c634ed26ac82&g=libreoffice-3-6 Related: fdo#38606 Properly store dialog's position and current page It will be available in LibreOffice 3.6.4. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
it works fine thank you !
I confirm the bug was presente on LibO 3.6.3 and is gone in LibO 3.6.4. marking this as RESOLVED FIXED
Caolan McNamara committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=0157f0b1ba364f7f9af2aacd1be9fbb5ddec2b4d Related: fdo#38606 keep style dialog open when apply is clicked The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Caolan McNamara committed a patch related to this issue. It has been pushed to "libreoffice-4-0": http://cgit.freedesktop.org/libreoffice/core/commit/?id=cafa391c032dbba6869bbf56132025240c34c123&g=libreoffice-4-0 Related: fdo#38606 keep style dialog open when apply is clicked It will be available in LibreOffice 4.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.