Related: fdo#38606 keep style dialog open when apply is clicked

i.e. don't close and reopen, just stay open

Change-Id: I11cdc492e3c4adfb75c9a0dfa52e5ba351914858